--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"styled-components": "^4.1.3",
 		"styled-icons": "^7.4.2"
 	},
-	"homepage": "https://loving-shannon-111664.netlify.com",
+	"homepage": "https://manaje.netlify.com",
 	"devDependencies": {
 		"eslint-config-prettier": "^3.1.0",
 		"eslint-plugin-prettier": "^3.0.0",
